--- a/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
+++ b/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-layout>
-        <lightning-layout-item class="slds-align-middle">
+        <lightning-layout-item class="slds-align-middle slds-container--center">
             <lightning-combobox value={selectedBoatTypeId} options={searchOptions} onchange={handleSearchOptionChange}
                 class="slds-align-middle"></lightning-combobox>
         </lightning-layout-item>
